--------------------
Bazaar Release Notes
--------------------

.. contents::


IN DEVELOPMENT
--------------

  FEATURES:

    * Stacked branches are now supported. See ``bzr help branch`` and 
      ``bzr help push``. (Robert Collins)

  BUG FIXES:

    * Avoid KnitCorrupt error extracting inventories from some repositories.
      (The data is not corrupt; an internal check is detecting a problem
      reading from the repository.)
      (Martin Pool, Andrew Bennetts, Robert Collins, #234748)

    * Inserting a bundle which changes the contents of a file with no trailing
      end of line, causing a knit snapshot in a 'knits' repository will no longer
      cause KnitCorrupt. (Robert Collins)

    * ``RemoteBranch.pull`` needs to return the ``self._real_branch``'s
      pull result. It was instead just returning None, which breaks ``bzr
      pull``. (John Arbash Meinel, #238149)

    * Sanitize branch nick before using it as an attachment filename in
      ``bzr send``. (Lukáš Lalinský, #210218)

    * Squash ``inv_entry.symlink_target`` to a plain string when
      generating DirState details. This prevents from getting a
      ``UnicodeError`` when you have symlinks and non-ascii filenames.
      (John Arbash Meinel, #135320)

  IMPROVEMENTS:

    * Added the 'alias' command to set/unset and display aliases. (Tim Penhey)

    * ``added``, ``modified``, and ``unknowns`` behaviour made consistent (all three
      now quote paths where required). Added ``--null`` option to ``added`` and 
      ``modified`` (for null-separated unknowns, use ``ls --unknown --null``)
      (Adrian Wilkins)

    * Faster branching (1.09x) and lightweight checkouts (1.06x) on large trees.
      (Ian Clatworthy, Aaron Bentley)

  BUGFIXES:

    * ``bzr status`` was breaking if you merged the same revision twice.
      (John Arbash Meinel, #235407)

  DOCUMENTATION:

    * Added *Bazaar Zen* section to the User Guide. (Ian Clatworthy)

  TESTING:
