@@ -13,6 +13,8 @@ IN DEVELOPMENT
     * Stacked branches are now supported. See ``bzr help branch`` and 
       ``bzr help push``. (Robert Collins)
 
+    * Sites may suggest a branch to stack new branches on.  (Aaron Bentley)
+
   BUG FIXES:
 
     * Avoid KnitCorrupt error extracting inventories from some repositories.
@@ -69,6 +71,9 @@ IN DEVELOPMENT
       tree twice, or merge an ancestor of an existing merge, it will only
       record the newest. (If you merge a descendent, it will replace its
       ancestor). (John Arbash Meinel, #235407)
+
+    * ``RepositoryPolicy.__init__`` now requires stack_on and stack_on_pwd,
+      through the derived classes do not.  (Aaron Bentley)
 
   INTERNALS:
 
